Bug 309283 - Komposer doesn't Install on Kubuntu 12.10
Summary: Komposer doesn't Install on Kubuntu 12.10
Status: RESOLVED FIXED
Alias: None
Product: muon
Classification: Unmaintained
Component: muon (other bugs)
Version First Reported In: 1.4.1
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Jonathan Thomas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-31 00:14 UTC by Kenyon Karl
Modified: 2012-10-31 01:35 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kenyon Karl 2012-10-31 00:14:00 UTC
Komposer (Web Development) disappeared from my Kubuntu Linux system during the uprade from 12.04 to 12.10. Kompozer is still listed on Muon Software Center, but when install button is pressed, it begins to install but the install button returns very quickly, with no indication that the install occurred. Were binaries provided for the Ubuntu 12.10 repository?

Reproducible: Always
Comment 1 Jonathan Thomas 2012-10-31 00:36:03 UTC
Kompozer was removed for 12.10 because it wouldn't build anymore, and therefore couldn't be properly maintained by Ubuntu: https://bugs.launchpad.net/ubuntu/+source/kompozer/+bug/1065547

The bug here is that locally-referenced uninstalled packages that can no longer be downloaded are showing up in the Software Center.
Comment 2 Jonathan Thomas 2012-10-31 01:06:40 UTC
Git commit 1bf2b56c72683f2f7fcc043004e6c1cbbb42da6e by Jonathan Thomas.
Committed on 31/10/2012 at 02:05.
Pushed by jmthomas into branch 'master'.

Do not show packages that exist but that are not installed and not downloadable.
This can happen if app-install-data is not kept in sync with package removals from a Debian archive.

M  +7    -1    libmuon/ApplicationBackend/ApplicationBackend.cpp

http://commits.kde.org/muon/1bf2b56c72683f2f7fcc043004e6c1cbbb42da6e
Comment 3 Kenyon Karl 2012-10-31 01:35:53 UTC
I appreciate your very prompt response!

On Tue, Oct 30, 2012 at 8:36 PM, Jonathan Thomas <echidnaman@kubuntu.org>wrote:

> https://bugs.kde.org/show_bug.cgi?id=309283
>
> Jonathan Thomas <echidnaman@kubuntu.org> changed:
>
>            What    |Removed                     |Added
>
> ----------------------------------------------------------------------------
>              Status|UNCONFIRMED                 |NEW
>      Ever confirmed|0                           |1
>            Severity|critical                    |normal
>
> --- Comment #1 from Jonathan Thomas <echidnaman@kubuntu.org> ---
> Kompozer was removed for 12.10 because it wouldn't build anymore, and
> therefore
> couldn't be properly maintained by Ubuntu:
> https://bugs.launchpad.net/ubuntu/+source/kompozer/+bug/1065547
>
> The bug here is that locally-referenced uninstalled packages that can no
> longer
> be downloaded are showing up in the Software Center.
>
> --
> You are receiving this mail because:
> You reported the bug.
>