Do not show packages that exist but that are not installed and not downloadable. This can happen if app-install-data is not kept in sync with package removals from a Debian archive.

BUG:309283